<resources>
    <string name="app_name">Kaizen Arts</string>

    <string name="first_slide">Find your signature</string>
    <string name="second_slide">Delivered with care</string>
    <string name="third_slide">Made to be worn</string>

    <string name="description">Our goal is to deliver the highest level of service to you.</string>
    <string name="first_slide_desc">Explore a curated edit of earrings, bangles, and chokers shaped for every mood.</string>
    <string name="second_slide_desc">From our atelier to your door - packed carefully and shipped with intention.</string>
    <string name="third_slide_desc">Thoughtful pieces and lasting craft, designed for the way you move through the day.</string>
    <string name="onboard_skip">Skip</string>
    <string name="onboard_next">Continue</string>
    <string name="onboard_start">Begin shopping</string>
    <string name="onboard_step_one">01</string>
    <string name="onboard_step_two">02</string>
    <string name="onboard_step_three">03</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
